---
layout: doc
title: Release Notes
description: Release notes for each version of FusionAuth
---

:sectnumlevels: 0

////
Hide stuff inside these lines
////

////
[role=release-note]

== Version 1.16.0
_Pending Release_

=== New
* Support for Elasticsearch version 7
* The Registration API returns an access token within the `token` field of responses to `POST` requests.  See the link:/docs/v1/tech/apis/registrations[Registrations API] documentation for reference.
** Application registration records a login and will be reflected in the Login, Daily Active User, and Monthly Active User reports within the FusionAuth admin UI.
* The `applicationId` is now optional for `PUT` requests (update login instants) to the Login API.  See the link:/docs/v1/tech/apis/login#update-login-instant[Login API] documentation for reference.
** `PUT` requests to the Login API records a login and will be reflected in the Login, Daily Active User, and Monthly Active User reports within the FusionAuth admin UI.
* The User API returns an access token within the `token` field of responses to `POST` requests creating a user.  See the link:/docs/v1/tech/apis/users#create-a-user[User API] documentation for reference.
** User creation records a login and will be reflected in the Login, Daily Active User, and Monthly Active User reports within the FusionAuth admin UI.

=== Internal
* Upgraded to Java 14
* Docker images are now smaller
////

[role=release-note]

== Version 1.15.8
_April 10th, 2020_

=== Fixed