@@ -79,6 +79,14 @@ table.api {
     text-transform: uppercase;
   }
 
+  .note {
+    margin-top: 20px;
+    color: #1f5fa7;
+    font-size: 13px;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+
   .since {
     color: seagreen;
     font-size: 13px;
