@@ -13,8 +13,24 @@
 
 It is necessary to use the [field]#query# parameter when querying against `registrations` in order to achieve expected results, as this field is defined as a link:https://www.elastic.co/guide/en/elasticsearch/reference/6.3/nested.html[nested datatype] in the ElasticSearch mapping.
 
+[note]#Database search engine#
+This parameter is not compatible with the database search engine, it may only be used when Elasticsearch is configured as the user search engine.
+
 |[field]#queryString# [type]#[String]# [optional]#Optional# [since]#Available Since 1.13.0#
 |The Elasticsearch query string that is used to search for Users to be deleted. The [field]#userIds#, [field]#query#, and [field]#queryString#  parameters are mutually exclusive, they are listed here in order of precedence.
+
+[note]#Database search engine#
+The Elasticsearch query string DSL is not supported for the database search engine.  Database search limits effective queries to single search terms that may match the following fields on the User:
+
+* `first_name`
+* `last_name`
+* `full_name`
+* `email`
+* `username`
+
+The following is an example bulk delete request with a `queryString` value that is compatible with the database search engine:
+
+``DELETE /api/user/bulk?queryString=jared%40fusionauth.io``
 
 |[field]#userIds# [type]#[Array]# [optional]#Optional#
 |An array of User Ids to delete. The [field]#userIds#, [field]#query#, and [field]#queryString#  parameters are mutually exclusive, they are listed here in order of precedence.
