@@ -15,11 +15,30 @@ Using this parameter will not hit the Elasticsearch index, instead it will cause
 
 It is necessary to use the [field]#search.query# parameter when querying against `registrations` in order to achieve expected results, as this field is defined as a link:https://www.elastic.co/guide/en/elasticsearch/reference/6.3/nested.html[nested datatype] in the ElasticSearch mapping.
 
+[note]#Database search engine#
+This parameter is not compatible with the database search engine, it may only be used when Elasticsearch is configured as the user search engine.
+
 |[field]#search.queryString# [type]#[String]# [optional]#Optional#
 |The Elasticsearch query string that is used to search for Users.  The [field]#ids#, [field]#query#, and [field]#queryString#  parameters are mutually exclusive, they are listed here in order of precedence.
 
+[note]#Database search engine#
+The Elasticsearch query string DSL is not supported for the database search engine.  Database search limits effective queries to single search terms that may match the following fields on the User:
+
+* `first_name`
+* `last_name`
+* `full_name`
+* `email`
+* `username`
+
+The following is an example search request with a `queryString` value that is compatible with the database search engine:
+
+``GET /api/user/search?queryString=jared%40fusionauth.io``
+
 |[field]#search.sortFields# [type]#[Array]# [optional]#Optional#
 |An array of sort fields used to sort the result. The order the sort fields are provided will be maintained in the sorted output.
+
+[note]#Database search engine#
+This parameter has no effect when the database is configured as the user search engine.
 
 |[field]#search.sortFields[``x``].missing# [type]#[String]# [optional]#Optional# [default]#defaults to `_last`#
 |The value to substitute if this field is not defined. Two special values may be used:
