@@ -18,6 +18,8 @@ _Pending Release_
 
 === New
 * Support for Elasticsearch version 7
+* Support for using the database as the user search engine.  This is now the default configuration.  See the link:/docs/v1/tech/core-concepts/users#user-search[Core Concepts - Users] documentation for details.
+** Use of the database search engine provides limited search capabilities, and has limitations for the Users API, see the link:/docs/v1/tech/apis/users#bulk-delete-users[Bulk Delete Users API] and link:/docs/v1/tech/apis/users#search-for-users[Search for Users API] documentation for details.
 * The Registration API returns an access token within the `token` field of responses to `POST` requests.  See the link:/docs/v1/tech/apis/registrations[Registrations API] documentation for reference.
 ** Application registration records a login and will be reflected in the Login, Daily Active User, and Monthly Active User reports within the FusionAuth admin UI.
 * The `applicationId` is now optional for `PUT` requests (update login instants) to the Login API.  See the link:/docs/v1/tech/apis/login#update-login-instant[Login API] documentation for reference.
